<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="0dp"
    tools:context=".SingUpActivity">


    <TextView
        android:id="@+id/app_title_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/title_name"
        android:textColor="@color/red_senai"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_subtitle_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sub_title_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/app_title_text_view2"
        app:layout_constraintTop_toBottomOf="@+id/app_title_text_view2" />

    <TextView
        android:id="@+id/textViewNewUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:drawableTint="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/title_singup_activity"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_subtitle_text_view2"
        app:layout_constraintVertical_bias="0.060000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNewUser">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText

                android:id="@+id/editTextHeight"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/height_resgister"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/height_resgister"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/editTextHeight"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextWeight"
                android:layout_width="160dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/weight_resgister"
                android:inputType="numberDecimal"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/weight_resgister"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/editTextEmail"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/password_register"
                android:inputType="textPersonName|textPassword|textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/name_register"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/editTextName"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/email_register"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/name_register"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_register"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/editTextPassword"
                app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password_register"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/editTextName"
                app:layout_constraintTop_toBottomOf="@+id/editTextName"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/buttonSingUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_button"
                android:paddingStart="50dp"
                android:paddingTop="20dp"
                android:paddingEnd="50dp"
                android:paddingBottom="20dp"
                android:text="@string/button_sing_up"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextHeight" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/footer_background"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="0"
            android:text="@string/logo_name"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>